Add a new file modification

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li>Fortran</li>
             <li>Delphi</li>
         </ol>
-        <li>Liguagens legais novas</li>
+        <li>Linguagens legais novas</li>
         <ol type="I">
             <li>PHP</li>
             <li>Kotlin</li>
