--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img src="Logohtml.png" alt="Logo HTML5">
     <img src="https://cdn.iconscout.com/icon/free/png-512/javascript-2038874-1720087.png" alt="" width="128px;">
     <img src="logocss.png" alt="Logo CSS3" width="128px;">
-    <a href="" target="_blank"></a>
+    <a href="bruno.html" target="_blank"></a>
     <p>Podemos marcar um texto usando a tag MARK</p>
     <p>Exemplo de texto <mark>marcado</mark></p>
     <p>Outro texto <mark>marcado</mark></p>
