--- a/bruno.html
+++ b/bruno.html
@@ -15,7 +15,7 @@
     </figure>
     <p><strong>Peter Gene Hernandez</strong> (born October 8, 1985), known professionally as Bruno Mars, is an American singer, songwriter, record producer, multi-instrumentalist, and dancer. He is known for his stage performances, retro showmanship, and for performing in a wide range of musical styles, including pop, R&B, funk, soul, reggae, hip hop, and rock. Mars is accompanied by his band, the Hooligans, who play a variety of instruments, such as electric guitar, bass, piano, keyboards, drums, and horns, and also serve as backup singers and dancers.</p>
     <h3>Hey Ruth, it´s me Samuel!!!</h3>
-    <img src="./20210215_105415.jpg" width="300px" height="300px" alt="Ruth">
+    <img src="ruth.jpg" width="300px" height="300px" alt="Ruth">
 
 </body>
 </html>
