--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <img src="https://cdn.iconscout.com/icon/free/png-512/javascript-2038874-1720087.png" alt="" width="128px;">
     <img src="logocss.png" alt="Logo CSS3" width="128px;">
     <a href="bruno.html" target="_blank">Bruno</a>
+    <img src="ruth.jpg" width="300px" alt="Ruth">
     <p>Podemos marcar um texto usando a tag MARK</p>
     <p>Exemplo de texto <mark>marcado</mark></p>
     <p>Outro texto <mark>marcado</mark></p>
