--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <h1>Parágrafos e quebras de linhas!</h1>
+    <h1>Ruth é Feiaaah!!!</h1>
     <p>Vc pode escrever tudo de qualquer jeito desde que esteja entre as tags
         &lt;p&gt; e &lt;/p&gt; <!--LESS THAN & GREATER THAN-->
         &reg;&copy;&trade;&euro;&pound;&delta; and <a href="EX001.html" rel="next" target="_self">&Delta;</a>
@@ -23,7 +23,6 @@
     <img src="https://cdn.iconscout.com/icon/free/png-512/javascript-2038874-1720087.png" alt="" width="128px;">
     <img src="logocss.png" alt="Logo CSS3" width="128px;">
     <a href="bruno.html" target="_blank">Bruno</a>
-    <img src="ruth.jpg" width="300px" alt="Ruth">
     <p>Podemos marcar um texto usando a tag MARK</p>
     <p>Exemplo de texto <mark>marcado</mark></p>
     <p>Outro texto <mark>marcado</mark></p>
