--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <h1>Ruth é Feiaaah!!!</h1>
+    <h1>Parágrafos e textos personalizados!</h1>
     <p>Vc pode escrever tudo de qualquer jeito desde que esteja entre as tags
         &lt;p&gt; e &lt;/p&gt; <!--LESS THAN & GREATER THAN-->
         &reg;&copy;&trade;&euro;&pound;&delta; and <a href="EX001.html" rel="next" target="_self">&Delta;</a>
